--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,4 +13,5 @@ jobs:
       build_config: Release
       app_name: ${{ github.ref == 'refs/heads/main' && 'demowebapp' || github.ref == 'refs/heads/stage' && 'demo-web28' || github.ref == 'refs/heads/test' && 'your-webapp-dev' || 'your-webapp-dev' }}
       environment: ${{ github.ref_name }}
-      
+    secrets:
+      AZURE_WEBAPP_PUBLISH_PROFILE: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
